--- a/tv/src/css/style.css
+++ b/tv/src/css/style.css
@@ -1,3 +1,7 @@
+.bbb{
+	color: black;
+}
+
 *{
 	margin: 0;
 	padding: 0;
@@ -19,6 +23,10 @@ header {
 	width: 100%;
 	background-color: #000;
 	display: flex;
+}
+.redicon{
+	color:red;
+	background-color: blue;
 }
 
 .header_logo {
@@ -77,17 +85,21 @@ main .main_welcome h1 {
 	font-size: 44px;
 }
 
+
+
 .lil{
 	max-width: 100%;
 	height: auto;
 }
 
+
 .finish{
-	background-color: rgba(255,255,255,0.8);
+	background-color: #000;
 	text-align: center;
 	max-width: 100%;
-	height: 100px;
-	padding-top: 35px;
+	height: 50px;
+	margin-top: 25px;
+	padding-top: 25px;
 }
 
 .lilmod{
@@ -102,6 +114,7 @@ main .main_welcome h1 {
 	height: 50px;
 	background-color: black;
 }
+
 
 .cuba {
 	color: #fcac45;
