--- a/tv2/src/css/style.css
+++ b/tv2/src/css/style.css
@@ -15,6 +15,17 @@
 	padding-bottom: 12rem;
 }
 
+.non-type{
+	text-align: left;
+}
+
+@media (min-width: 768px) {
+  .non-type {
+    text-align:center;
+  }
+ 
+}
+
 .main_welcome p {
 	color: #999999;
 	font-size: 20px;
@@ -77,7 +88,9 @@
 .margincard{
 	margin-bottom: 1rem;
 }
-
+.numer{
+	font-weight: bold;
+}
 .mainw {
 	margin-top: 5rem;
 	background: black;
@@ -90,6 +103,7 @@
 	display: block;
 	margin:auto ;
 }
+
 .db{
 	display: block;
 }
